# PG1_2019

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  copyData.bat  hemisphereVisualizer.py
data/: 6887_allied_avenger.mtl  6887_allied_avenger2.mtl  cornell_box2.mtl  geosphere.mtl  geospherePathTracing.mtl  geospheres_5x5.mtl  geospheres_5x5_glass.mtl
renders/: README.MD
src/pg/pg1_embree/: camera.cpp  camera.h  material.cpp  material.h  matrix3x3.cpp  matrix3x3.h  mymath.h  objloader.cpp  objloader.h  pg1_embree.cpp  raytracer.cpp  raytracer.h  simpleguidx11.cpp  simpleguidx11.h  stdafx.cpp  stdafx.h  structs.h  surface.cpp  surface.h  texture.cpp  texture.h  triangle.cpp  triangle.h  tutorials.cpp  tutorials.h  utils.cpp  utils.h  vector3.cpp  vector3.h  vertex.cpp  vertex.h
src/pg/pg1_embree/engine/: camera.cpp  camera.h  light.cpp  light.h  raytracer.cpp  raytracer.h  rtcrayhitior.h  simpleguidx11.cpp  simpleguidx11.h  sphericalmap.cpp  sphericalmap.h
src/pg/pg1_embree/geometry/: material.cpp  material.h  objloader.cpp  objloader.h  surface.cpp  surface.h  texture.cpp  texture.h  triangle.cpp  triangle.h  vertex.cpp  vertex.h
src/pg/pg1_embree/math/: matrix3x3.cpp  matrix3x3.h  mymath.cpp  mymath.h  vector.cpp  vector.h
src/pg/pg1_embree/shaders/: brdf.cpp  brdf.h  commonshader.cpp  commonshader.h  diffuseshader.cpp  diffuseshader.h  glassshader.cpp  glassshader.h  normalsshader.cpp  normalsshader.h  pathtracerhelper.cpp  pathtracerhelper.h  pathtracingshader.cpp  pathtracingshader.h  phongshader.cpp  phongshader.h  recursivephongshader.cpp  recursivephongshader.h  shader.cpp  shader.h  shaderenum.h  shadingtype.h  torrancesparrowbrdf.cpp  torrancesparrowbrdf.h
src/pg/pg1_embree/tests/: test.h
src/pg/pg1_embree/utils/: stb_image_write.h  structs.h  utils.cpp  utils.h
